--- a/frontend/index.html
+++ b/frontend/index.html
@@ -401,6 +401,11 @@
         font-size: 0.95rem;
         color: #ccc;
         margin-top: 1.5rem;
+        font-family: monospace;
+        letter-spacing: 0.05em;
+        width: 2ch; /* enough for '10' */
+        display: inline-block;
+        text-align: center;
       }
 
 
@@ -708,7 +713,7 @@
           document.getElementById("result-year").textContent = currentTrackYear;
           document.getElementById("result-overlay").style.display = "flex";
 
-          let nextSongCountdown = 10;
+          let nextSongCountdown = 9;
           const nextTimerSpan = document.getElementById("next-timer-count");
           nextTimerSpan.textContent = nextSongCountdown;
 
@@ -741,7 +746,7 @@
           // Wait 5 seconds, then go to the next song
           setTimeout(() => {
             document.getElementById("random-button").click();
-          }, 10000);
+          }, 9000);
         }
 
       });
@@ -793,8 +798,8 @@
         <div id="result-artist"></div>
         <div id="result-title"></div>
         <div id="result-year"></div>
+        <div id="next-timer"><span id="next-timer-count">9</span></div>
       </div>
-      <div id="next-timer">Next song in <span id="next-timer-count">10</span> seconds...</div>
     </div>
   </div>
 
